--- a/frontend/src/app/components/registro/registro.component.html
+++ b/frontend/src/app/components/registro/registro.component.html
@@ -8,7 +8,7 @@
       required="required"
       formControlName="nombre"
       />
-      <span *ngIf="regitrarUsuario.get('nombre')?.hasError('required') && regitrarUsuario.get('nombre')?.touched"  class="text-danger errorLabel" >El nombre es requerido</span>
+      <span *ngIf="regitrarUsuario.get('nombre')?.hasError('required') && regitrarUsuario.get('nombre')?.touched"  class="text-danger errorLabel" >El <strong>nombre</strong> es requerido</span>
 
       <input
       type="text"
@@ -17,7 +17,7 @@
       required="required"
       formControlName="apellido"
       />
-      <span *ngIf="regitrarUsuario.get('apellido')?.hasError('required') && regitrarUsuario.get('apellido')?.touched"  class="text-danger errorLabel" >El Apellido es requerido</span>
+      <span *ngIf="regitrarUsuario.get('apellido')?.hasError('required') && regitrarUsuario.get('apellido')?.touched"  class="text-danger errorLabel" >El <strong>apellido</strong> es requerido</span>
 
       <input
       type="text"
@@ -26,7 +26,7 @@
       required="required"
       formControlName="direccion"
       />
-      <span *ngIf="regitrarUsuario.get('direccion')?.hasError('required') && regitrarUsuario.get('direccion')?.touched"  class="text-danger errorLabel" >La direccion es requerida</span>
+      <span *ngIf="regitrarUsuario.get('direccion')?.hasError('required') && regitrarUsuario.get('direccion')?.touched"  class="text-danger errorLabel" >La <strong>dirección</strong> es requerida</span>
       <input
         type="email"
         id="email"
@@ -34,7 +34,7 @@
         required="required"
         formControlName="email"
       />
-      <span *ngIf="regitrarUsuario.get('email')?.hasError('email') && regitrarUsuario.get('email')?.touched"  class="text-danger errorLabel" >El email no tiene el formato correcto</span>
+      <span *ngIf="regitrarUsuario.get('email')?.hasError('email') && regitrarUsuario.get('email')?.touched"  class="text-danger errorLabel" >El <strong>email</strong> no tiene el formato correcto</span>
       <input
         type="password"
         id="password"
@@ -42,7 +42,7 @@
         required="required"
         formControlName="password"
       />
-      <span *ngIf="regitrarUsuario.get('password')?.hasError('minlength') && regitrarUsuario.get('password')?.touched"  class="text-danger errorLabel" >La contraseña debe tener minimo 6 caracteres</span>
+      <span *ngIf="regitrarUsuario.get('password')?.hasError('pattern') && regitrarUsuario.get('password')?.touched"  class="text-danger errorLabel" >La <strong>contraseña</strong> debe tener minimo 8 caracteres, una letra mayúscula, una letra minúscula,un numero y un caracter especial</span>
       <input
       type="password"
       id="repetirPassword"
@@ -54,7 +54,7 @@
       <button type="submit">Registrar</button>
 
       <div>
-        <p class="mt-3">Tienes cuenta? <a routerLink="/login">Inicie sesion</a></p>
+        <p class="mt-3">Tienes cuenta? <a routerLink="/login" >Inicie sesion</a></p>
       </div>
     </form>
     <app-spinner></app-spinner>
