--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -10,7 +10,7 @@
         formControlName="email"
      
       />
-      <span *ngIf="loginUsuario.get('email')?.hasError('email') && loginUsuario.get('email')?.touched"  class="text-danger errorLabel" >El email no tiene el formato correcto</span>
+      <span *ngIf="loginUsuario.get('email')?.hasError('email') && loginUsuario.get('email')?.touched"  class="text-danger errorLabel" >El <strong>email</strong> no tiene el formato correcto</span>
 
       <input
         type="password"
@@ -19,8 +19,7 @@
         required="required"
         formControlName="password"
       />
-      <span *ngIf="loginUsuario.get('password')?.hasError('required') && loginUsuario.get('password')?.hasError('minlength') && loginUsuario.get('password')?.touched"  class="text-danger errorLabel" >La contraseña es invalida</span>
-
+      <span *ngIf="loginUsuario.get('password')?.hasError('required') && loginUsuario.get('password')?.touched"  class="text-danger errorLabel" >La <strong>contraseña </strong> es invalida</span>
       <button type="submit">Login</button>
       <div>
         <p class="mt-3">No Tienes cuenta? <a routerLink="/singUp">Registrar</a></p>
