--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <!-- información generica de cualquier footer -->
 
-<footer class="site-footer">
+<footer class="site-footer" style="margin-top: 2em;">
     <div class="container">
       <div class="row">
 
