--- a/frontend/src/app/components/perfil/perfil.component.html
+++ b/frontend/src/app/components/perfil/perfil.component.html
@@ -1,18 +1,19 @@
 <div class="d-flex justify-content-around flex-wrap
             container" style="margin-top:1em;">
-  <div class="col-lg-3 col-12 
-              d-flex justify-content-center flex-wrap 
-              container row 
-              text-center bg-light rounded shadow">
-    <span class="material-icons text-center" style="font-size: 15em">
-      account_circle
-    </span>
-    <h4>{{usuario.nombre}} {{usuario.apellido}}</h4>
-    <p>mail: {{usuario.email}}</p>
-    <p>{{usuario.direccion}}</p>
+  <div class="col-lg-3 col-12 p-2">
+    <div class="d-flex justify-content-center flex-wrap 
+                container row 
+                text-center bg-light rounded shadow">
+      <span class="material-icons text-center" style="font-size: 10em">
+        account_circle
+      </span>
+      <h4>{{usuario.nombre}} {{usuario.apellido}}</h4>
+      <p>mail: {{usuario.email}}</p>
+      <p>{{usuario.direccion}}</p>
+    </div>
   </div>
   
-  <div class="col-lg-7 col-12  p-4 ">
+  <div class="col-lg-8 col-12 p-2">
     <h3>Carritos comprados:</h3>
     <hr>
     <div>
