--- a/frontend/src/app/components/recuperar-contasenia/recuperar-contasenia.component.html
+++ b/frontend/src/app/components/recuperar-contasenia/recuperar-contasenia.component.html
@@ -1,6 +1,6 @@
-<div class="login" >
-    <form [formGroup]="recuperarUsuario" (ngSubmit)="recuperar()" class="custom-form" method="post">
-      <h1>Recuperar contraseña</h1>
+<div class="login container d-flex justify-content-center align-items-center " >
+  <form [formGroup]="recuperarUsuario" (ngSubmit)="recuperar()"  class="card p-5 shadow" method="post">
+      <h1 class="text-center fw-light mb-4" >Recuperar contraseña</h1>
 
       <input
         type="email"
@@ -8,13 +8,32 @@
         placeholder="Ingrese email"
         required="required"
         formControlName="correo"
+        class="form-control mb-3"
       />
       <span *ngIf="recuperarUsuario.get('correo')?.hasError('email') && recuperarUsuario.get('correo')?.touched"  class="text-danger errorLabel" >El <strong>email</strong> no tiene el formato correcto</span>
 
-      <button type="submit">Enviar email</button>
+
+      <button type="submit" class="btn btn-primary d-flex align-items-center justify-content-center fs-4">
+        <span class="material-icons me-2">
+          login
+        </span>
+        Enviar
+      </button>
+
+      <hr>
+
       <div>
-        <p class="mt-3"><a routerLink="/login">Volver</a></p>
+        <p class="mt-3 d-flex align-items-center ">
+          ¿Quiere volver al login? 
+          <a  a routerLink="/login" 
+              class="btn btn-outline-primary ms-3 d-flex align-items-center justify-content-center"> 
+            <span class="material-icons me-2">
+              lock_reset
+            </span>
+            volver
+          </a>
+        </p>
       </div>
     </form>
+    <app-spinner></app-spinner>
   </div>
-  <app-spinner></app-spinner>
