--- a/frontend/src/app/components/recuperar-contasenia/recuperar-contasenia.component.html
+++ b/frontend/src/app/components/recuperar-contasenia/recuperar-contasenia.component.html
@@ -1,5 +1,5 @@
-<div class="login container d-flex justify-content-center align-items-center " >
-  <form [formGroup]="recuperarUsuario" (ngSubmit)="recuperar()"  class="card p-5 shadow" method="post">
+<div class="login container d-flex justify-content-center align-items-center " style="width: 40%;">
+  <form [formGroup]="recuperarUsuario" (ngSubmit)="recuperar()"  class="w-100 card px-5 py-4 shadow mt-5" method="post">
       <h1 class="text-center fw-light mb-4" >Recuperar contraseña</h1>
 
       <input
