--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -4,9 +4,9 @@
     <div class="container">
       <div class="row">
 
-        <div class="col-xs-12 col-md-6"></div>
+        <div class="col-xs-6 col-md-3"></div>
     
-        <div class="col-sm-12 col-md-6">
+        <div class="col-sm-12 col-md-6 integrantes" >
           <h6>Integrantes</h6>
           <ul class="footer-links">
             <li>Aquino Jannett</li>
@@ -15,14 +15,6 @@
             <li>Oyaregui Manuel</li>
           </ul>
         </div>
-<!--
-        <div class="col-xs-6 col-md-3">
-          <h6>Repositorio</h6>
-          <ul class="footer-links">
-            <li><a href="https://github.com/danerop/pen-tablet-app">Grupal</a></li>
-            
-          </ul>
-        </div>-->
       </div>
       <hr>
     </div>
@@ -36,9 +28,9 @@
         <div class="col-md-4 col-sm-6 col-xs-12">
           <ul class="social-icons">
             <li><a class="github" href="https://github.com/danerop/pen-tablet-app"><i class="fa fa-github"></i></a></li>
-            <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>   
+            <li><a class="facebook" href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
+            <li><a class="twitter" href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
+            <li><a class="linkedin" href="https://www.linkedin.com/"><i class="fa fa-linkedin"></i></a></li>   
           </ul>
         </div>
       </div>
