pequeños estilos y cambio al .sql

--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -9,10 +9,10 @@
         <div class="col-sm-12 col-md-6 integrantes" >
           <h6>Integrantes</h6>
           <ul class="footer-links">
-            <li>Aquino Jannett</li>
-            <li>Gómez Emanuel</li>
-            <li>Mercado Hector</li>
-            <li>Oyaregui Manuel</li>
+            <li> <small> <strong>Aquino Jannett</strong> - 95.893.314  </small> </li>
+            <li> <small> <strong>Gomez Emanuel</strong>  - 37.243.037</small> </li>
+            <li> <small> <strong>Mercado Hector</strong>  - 41.162.232 </small> </li>
+            <li> <small> <strong>Oyaregui Manuel</strong>  - 43.082.374 </small> </li>
           </ul>
         </div>
       </div>
