--- a/frontend/src/app/components/perfil/perfil.component.html
+++ b/frontend/src/app/components/perfil/perfil.component.html
@@ -8,8 +8,9 @@
         account_circle
       </span>
       <h4>{{usuario.nombre}} {{usuario.apellido}}</h4>
-      <p class="mb-1">mail: {{usuario.email}}</p>
-      <p class="mb-4">{{usuario.direccion}}</p>
+      <hr class="w-75 mt-1 mb-3">
+      <p class="mb-1">Mail:       <strong>{{usuario.email}}</strong></p>
+      <p class="mb-4">Dirección:  <strong>{{usuario.direccion}}</strong></p>
     </div>
   </div>
   
